# symplectix

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .ignore  .rustfmt.toml  BUILD  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  go.mod  pyproject.toml  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: cargo.yaml  ci.bazelrc  ci.yaml  pr.yaml
ano/: BUILD.bazel  ano.rs  ano_test.rs  beginning.rs  completing.rs  either.rs  filter.rs  fold.rs  from_fn.rs  fuse.rs  map.rs  par.rs  seq.rs  sum.rs  take.rs  with_initial_state.rs  xf.rs  zip.rs
ano/tests/: helper.rs  simple.rs  thread.rs
ano/xf/: comp.rs  filter.rs  identity.rs  map.rs  take.rs
bazel/: BUILD  cc.bzl  lib.bzl  py.bzl  rust.bzl  sh.bzl  uv.bzl
bazel/bazelrc/: BUILD.bazel  ci.bazelrc  preset.bazelrc  preset.bzl  profile.bazelrc
bazel/buildifier/: BUILD
bazel/bzlmod/: bazel_dep.MODULE.bazel  bazel_lib.MODULE.bazel  rust.MODULE.bazel
bazel/internal/: rust_fuzz_binary.bzl  rust_fuzz_target.bzl
bazel/mod/: bazel_dep.MODULE.bazel  bazel_lib.MODULE.bazel  python.MODULE.bazel  rust.MODULE.bazel
bazel/rust/: BUILD  fuzztest.py  rust_fuzz_binary.bzl
bazel/tools/: BUILD  fuzztest.py  gen_rust_project.sh  workspace_status.py
bitfunnel/: BUILD  bitfunnel.rs  signatures.rs
bitfunnel/tests/: signatures.rs
bitop/: and.rs  bitop.rs  bits.rs  mask.rs  not.rs  or.rs  word_array.rs  xor.rs
bits/: BUILD  and.rs  bits.rs  bits_mut.rs  bits_test.go  block.rs  buf.rs  buf_test.rs  lib.rs  mask.rs  not.rs  or.rs  word.rs  xor.rs
bits/bit/: bit.rs
bits/bitmask/: BUILD  bitmask.rs  helper.rs
bits/bitop/: BUILD  and.rs  bitop.rs  bits.rs  bits_mut.rs  block.rs  mask.rs  not.rs  or.rs  xor.rs
bits/bits/: bits.rs  block.rs  not.rs  or.rs  xor.rs
bits/bits_aux/: aux.rs
bits/bits_buf/: lib.rs
bits/bits_core/: bit_vec.rs  bits.rs  mask.rs  word.rs
bits/fenwicktree/: fenwicktree.rs  fenwicktree_test.rs
bits/poppy/: lib.rs
bits/roaring/: bit_set.rs
bits/slicing/: bits.rs  bits_test.rs  block.rs  block_test.rs  build.rs  build_test.rs  chunk.rs  chunk_test.rs  slicing.rs
bits/smallset/: lib.rs
bits/src/: bits_test.rs  lib.rs  mask_test.rs  pack_test.rs  word_test.rs
bits/tests/: buf.rs  mask.rs
bits_aux/: BUILD
bits_aux/src/: l1l2.rs  lib.rs
bitset/: BUILD  bitset.rs  difference.rs  intersection.rs  symmetric_difference.rs  union.rs
bitset/tests/: mask.rs
byc/src/: lib.rs
byc/tests/: faccess.rs
compacts/: BUILD
compacts/src/: bits.rs  fenwick.rs  ops.rs
compacts/tests/: bits.rs  wm.rs
compbits/: BUILD  bits.rs  block.rs  build.rs  compbits.rs  difference.rs  intersection.rs  union.rs  word.rs  xor.rs
compbits/benches/: bit_set.rs
compbits/bitop/: BUILD  bitop.rs  bits.rs  bits_mut.rs  block.rs  word.rs
compbits/rrr/: BUILD  README.md  build.rs  rrr.rs  rrr15.rs  rrr31.rs  rrr63.rs
compbits/rrr15/: build.rs  rrr15.rs
compbits/rrr31/: build.rs  rrr31.rs
compbits/rrr4/: build.rs  rrr4.rs
compbits/rrr63/: build.rs  rrr63.rs
compbits/setop/: BUILD  difference.rs  intersection.rs  setop.rs  symmetric_difference.rs  union.rs
compbits/src/: bit_set.rs  lib.rs
compbits/tests/: buf.rs  mask.rs  rrr.rs
compbits_aux/: BUILD
compbits_aux/src/: lib.rs
compbits_roaring/: BUILD
compbits_roaring/benches/: rrr.rs
compbits_rrr/rrr4/: rrr4.rs
compbits_rrr/rrrbuild/: rrrbuild.rs
compint/: compint_bench.rs
compint/streamvbyte/: streamvbyte.rs  streamvbyte_test.rs
compint/varint/: varint_test.rs
crates/ano/: BUILD  Cargo.toml
crates/bit/: BUILD  Cargo.toml  bit.rs
crates/bitcomp_poppy/: Cargo.toml
crates/bitcomp_roaring/: Cargo.toml
crates/bitcomp_rrr/: Cargo.toml  build.rs
crates/bitcomp_rrr/src/: lib.rs  rrr04.rs  rrr04_test.rs  rrr15.rs  rrr15_test.rs  rrr31.rs  rrr63.rs
crates/bitcomp_rrr/testdata/: comb_table_32.json
crates/bitcomp_rrrutil/: Cargo.toml
crates/bitcomp_slicing/: Cargo.toml
crates/bitcomp_test/: Cargo.toml
crates/bitcomp_test/benches/: compint.rs  rank_select.rs  rrr15.rs  rrr_encode_decode.rs
crates/bitcomp_test/benches/helper/: mod.rs
crates/bitcomp_test/src/: lib.rs
crates/bitfunnel/: Cargo.toml
crates/compint_bench/: BUILD  Cargo.toml
crates/compint_bench/benches/: compint.rs
crates/proc/: Cargo.toml  run_test.go
crates/proc/cmd/: BUILD
crates/proc/src/: child.rs  fsutil.rs  lib.rs  run_test.rs
crates/procrun/: BUILD  Cargo.toml
crates/procrun/src/: lib.rs  main.rs  reaper.rs
crates/procrun/tests/: run.rs
crates/protoc_plugin/: Cargo.toml  README.md
crates/protoc_plugin/examplepb/: example.message_descriptor_dump  service.proto
crates/protoc_plugin/examples/: protoc-gen-message-descriptor-dump
crates/protoc_plugin/src/: lib.rs
crates/rrr/: Cargo.toml  build.rs
crates/rrr/benches/: rrr15.rs
crates/rrr/src/: lib.rs  rrr31_test.rs  rrr63_test.rs
crates/subreaper/: Cargo.toml
crates/subreaper/src/: lib.rs  tests.rs
crates/subreaper/tests/: run.rs
cx/: BUILD.bazel  cx.rs  cx_test.rs  filter.rs  map.rs
devtool/: BUILD  Cargo.toml  lib.rs  workspace_status.py  workspace_status.sh
faccess/: BUILD.bazel  faccess.rs
faccess/tests/: runfiles.rs
fenwicktree/: BUILD  Cargo.toml
fold/: BUILD.bazel  filter.rs  fold.rs  fold_test.rs  map.rs  take.rs  xf.rs
fuzz/: BUILD  Cargo.toml  buffer_overflow.rs  stack_use_after_scope.rs
fuzz_examples/: BUILD  buffer_overflow.rs  memory_leaks.rs  should_not_fail.rs
fuzzing/: fuzzing.rs
mung/: BUILD.bazel  either.rs  filter.rs  iter_test.rs  lib.rs  map.rs  mung.rs  mung_test.rs  xfn.rs
plying/: BUILD  Cargo.toml
print_md_cst/: BUILD  Cargo.toml
proclib/: BUILD
proto_plugin/: BUILD
reaper/: BUILD.bazel  reaper.rs
rrr/: BUILD  math_comb_table.py
shtok/: BUILD
src/: lib.rs  main.rs
testing/: testing.rs
tools/ruff/: BUILD.bazel  __init__.py  _exec.py  ruff.py
unionfind/: BUILD
xf/: BUILD.bazel  comp.rs  filter.rs  fuse.rs  identity.rs  map.rs  par.rs  take.rs  xf.rs  xf_test.rs
xf/tests/: helper.rs  simple.rs  xf_test.rs
xfn/: BUILD.bazel  xfn.rs  xfn_test.rs
(+221 files in other folders)
