[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
# ano = { path = "crates/ano" }
# bit = { path = "crates/bit" }
# bits = { path = "crates/bits" }
# bits_aux = { path = "crates/bits_aux" }
# bits_buf = { path = "crates/bits_buf" }
faccess = { path = "crates/faccess" }
# fenwicktree = { path = "crates/fenwicktree" }
# print_md_cst = { path = "crates/print_md_cst" }
# procrun = { path = "crates/procrun" }
# procrun_test = { path = "crates/procrun_test" }
# protoc_plugin = { path = "crates/protoc_plugin" }
# shtok = { path = "crates/shtok" }
streamvbyte = { path = "crates/streamvbyte" }
subreaper = { path = "crates/subreaper" }
subreaper_test = { path = "crates/subreaper_test" }
testing = { path = "crates/testing" }
varint = { path = "crates/varint" }

anyhow = { version = "1" }
arc-swap = { version = "1.8" }
bitflags = { version = "2" }
bitpacking = { version = "0.9" }
byteorder = { version = "1" }
bon = { version = "3.8" }
criterion = { version = "0.8" }
cc = { version = "1" }
clap = { version = "4.5", features = ["derive"] }
futures = { version = "0.3" }
humantime = { version = "2" }
itertools = { version = "0.14" }
libc = { version = "0.2" }
libfuzzer-sys = { version = "0.4" }
num = { version = "0.4" }
prost = { version = "0.13" }
prost-reflect = { version = "0.14" }
prost-types = { version = "0.13" }
quickcheck = { version = "1" }
quickcheck_macros = { version = "1" }
tempfile = { version = "3" }
thiserror = { version = "1" }
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = { version = "0.25" }
tree-sitter-md = { version = "0.5" }

[workspace.lints.clippy]
pedantic = "warn"

[workspace.lints.rust]
missing_docs = "deny"

# [profile.dev.package.fenwicktree]
# overflowchecks = false

[profile.release]
lto = true
codegen-units = 1

# [profile.release.package.devtool]
# codegen-units = 32
