load("//bazel:rust.bzl", "rust")

rust.library(
    name = "ano",
    srcs = [
        "ano.rs",
        "fold.rs",
        "xf.rs",
    ],
)

rust.test(
    name = "ano_test",
    timeout = "short",
    crate = ":ano",
)

rust.doc_test(
    name = "ano_doc_test",
    timeout = "short",
    crate = ":ano",
)

rust.tests(
    name = "ano_suite",
    size = "small",
    srcs = [
        "ano_test.rs",
    ],
    deps = [
        ":ano",
    ],
)
