load("//bazel:rust.bzl", "rust")

rust.library(
    name = "fold",
    srcs = glob(["*.rs", "xf/*.rs"]),
)

rust.test(
    name = "fold_test",
    timeout = "short",
    crate = ":fold",
)

rust.doc_test(
    name = "fold_doc_test",
    timeout = "short",
    crate = ":fold",
)

rust.tests(
    name = "suite",
    size = "small",
    srcs = glob(["tests/*.rs"]),
    shared_srcs = ["tests/helper.rs"],
    deps = [":fold"],
)
