load("//bazel:rust.bzl", "rust")

rust.library(
    name = "ano",
    srcs = glob([
        "*.rs",
        "xf/*.rs",
    ]),
)

rust.test(
    name = "ano_test",
    timeout = "short",
    crate = ":ano",
)

rust.doc_test(
    name = "ano_doc_test",
    timeout = "short",
    crate = ":ano",
)

rust.tests(
    name = "suite",
    size = "small",
    srcs = glob(["tests/*.rs"]),
    shared_srcs = ["tests/helper.rs"],
    deps = [":ano"],
)
