load("//bazel:rust.bzl", "rust")

rust.library(
    name = "cx",
    srcs = [
        "cx.rs",
        "filter.rs",
        "map.rs",
    ],
)

rust.test(
    name = "xf_test",
    timeout = "short",
    crate = ":cx",
)

rust.doc_test(
    name = "xf_doc_test",
    timeout = "short",
    crate = ":cx",
)

rust.tests(
    name = "xf_suite",
    size = "small",
    srcs = [
        "cx_test.rs",
    ],
    deps = [
        ":cx",
    ],
)
