load("//bazel:rust.bzl", "rust")

rust.library(
    name = "fold",
    srcs = [
        "fold.rs",
        "xf.rs",
    ],
)

rust.test(
    name = "fold_test",
    timeout = "short",
    crate = ":fold",
)

rust.doc_test(
    name = "fold_doc_test",
    timeout = "short",
    crate = ":fold",
)

rust.tests(
    name = "suite",
    size = "small",
    srcs = [
        "fold_test.rs",
    ],
    deps = [
        ":fold",
    ],
)
