load("//bazel:rust.bzl", "rust")

rust.library(
    name = "mung",
    srcs = [
        "filter.rs",
        "lib.rs",
        "map.rs",
        "either.rs",
    ],
)

rust.test(
    name = "mung_test",
    timeout = "short",
    crate = ":mung",
)

rust.doc_test(
    name = "mung_doc_test",
    timeout = "short",
    crate = ":mung",
)

rust.tests(
    name = "mung_suite",
    size = "small",
    srcs = [
        "mung_test.rs",
    ],
    deps = [
        ":mung",
    ],
)
