load("//bazel:rust.bzl", "rust")

rust.library(
    name = "xf",
    srcs = [
        "filter.rs",
        "map.rs",
        "take.rs",
        "xf.rs",
    ],
)

rust.test(
    name = "xf_test",
    timeout = "short",
    crate = ":xf",
)

rust.doc_test(
    name = "xf_doc_test",
    timeout = "short",
    crate = ":xf",
)

rust.tests(
    name = "suite",
    size = "small",
    srcs = [
        "xf_test.rs",
    ],
    deps = [
        ":xf",
    ],
)
