load("//bazel:rust.bzl", "rust")

rust.library(
    name = "xf",
    srcs = glob(["*.rs"]),
)

rust.test(
    name = "xf_test",
    timeout = "short",
    crate = ":xf",
)

rust.doc_test(
    name = "xf_doc_test",
    timeout = "short",
    crate = ":xf",
)

rust.tests(
    name = "suite",
    size = "small",
    srcs = glob(["tests/*.rs"]),
    shared_srcs = ["tests/helper.rs"],
    deps = [":xf"],
)
