[package]
name = "bitcomp_rrr"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
harness = false
name = "rrr15"

[dependencies]
bitcomp_rrrutil.workspace = true

[dev-dependencies]
criterion.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
rand.workspace = true

[build-dependencies]
bitcomp_rrrutil.workspace = true

[lints]
workspace = true
