[package]
name = "bitcomp_rrr"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]

[dev-dependencies]
criterion.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]

[lints]
workspace = true
