[package]
name = "bitcomp_test"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
harness = false
name = "compint"

[dependencies]
bitpacking.workspace = true
streamvbyte.workspace = true
varint.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true
