[package]
name = "compint_bench"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
name = "compint"
harness = false

[dependencies]
bitpacking.workspace = true
streamvbyte.workspace = true
varint.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true
