[package]
name = "procrun"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "procrun"
path = "bin/procrun.rs"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
clap.workspace = true
futures.workspace = true
humantime.workspace = true
libc.workspace = true
reaper.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
byc.workspace = true
procrun_test.workspace = true
testing.workspace = true

[lints]
workspace = true
