[package]
name = "protoc_plugin"
version.workspace = true
edition.workspace = true
publish = false

[[example]]
name = "protoc-gen-message-descriptor-dump"

[dependencies]
anyhow.workspace = true
prost.workspace = true
prost-reflect.workspace = true
prost-types.workspace = true

[lints]
workspace = true
