[package]
name = "subreaper"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
faccess.workspace = true
subreaper_test.workspace = true
testing.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
clap.workspace = true
futures.workspace = true
humantime.workspace = true
libc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "subreaper"
