[package]
name = "subreaper"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "subreaper"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
clap.workspace = true
futures.workspace = true
humantime.workspace = true
libc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
faccess.workspace = true
subreaper_test.workspace = true
testing.workspace = true

[lints]
workspace = true
